--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
   justify-content: space-between;
 }
 
+.titulo-header{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: xx-large;
+  color: #ffffff;
+}
+
 .logo{
   width: 50px;
   height: 50px;
