--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,34 @@
 }
 
 .container-task{
+  gap: 20px;
+}
+
+article{
+  /* width: 80%; */
+  margin-left: 15px;
+  margin-right: 15px;
+  /* height: 200px; */
+  padding: 20px;
+}
+
+.card-task{
   border: 2px solid rgb(76, 130, 200);
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+}
+
+.card-task
+.card_task__responsible {
+  margin-left: 10px;
+  text-align: left;
+}
+
+.card-task
+.card-task__date{
+  margin-left: 10px;
+  text-align: left;
 }
 
 .button {
