--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@
   right: 0;
 
   transform: translate(100% );
-  /* will-change: transform; */
-  /* transition: transform 300ms ease-in-out; */
+  will-change: transform;
+  transition: transform 300ms ease-in-out;
 
   width: 20%;
-  height: 260px;
+  height: 350px;
   margin-top: 20px;
   padding: 30px;
   background-color: rgb(240, 245, 240);
@@ -109,6 +109,12 @@ article{
 
 .card-task
 .card_task__responsible {
+  margin-left: 10px;
+  text-align: left;
+}
+
+.card-task
+.card_task__details {
   margin-left: 10px;
   text-align: left;
 }
