--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
 
   display: flex;
   flex-direction: column;
-
+  gap: 20px;
 }
 
 .section-app .section-status-title{
@@ -89,40 +89,64 @@
 }
 
 .container-task{
+  display: flex;
+  flex-direction: column;
+  
   gap: 20px;
 }
 
 article{
-  /* width: 80%; */
-  margin-left: 15px;
+  width: 80%;
+  margin-left: 40px;
   margin-right: 15px;
   /* height: 200px; */
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .card-task{
+  background-color: rgb(195, 242, 192);
   border: 2px solid rgb(76, 130, 200);
+  font-size: smaller;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0,0.25);
   display: flex;
   flex-direction: column;
-  align-content: space-around;
+  /* align-content: space-around; */
 }
 
 .card-task
 .card_task__responsible {
   margin-left: 10px;
   text-align: left;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card_task__responsible--tag-creator{
+  font-weight: bold
 }
 
 .card-task
-.card_task__details {
+.card-task__details {
   margin-left: 10px;
   text-align: left;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card-task__details--task-details{
+  font-weight: bold
 }
 
 .card-task
 .card-task__date{
   margin-left: 10px;
   text-align: left;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card-task__date--tag-date{
+  font-weight: bold
 }
 
 .button {
