--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  
 }
 
 .section-app .section-status-title{
@@ -89,18 +89,15 @@
 }
 
 .container-task{
+  height: 200px;
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
   gap: 20px;
 }
 
 article{
-  width: 80%;
-  margin-left: 40px;
-  margin-right: 15px;
-  /* height: 200px; */
-  /* padding: 20px; */
+  width: 300px;
 }
 
 .card-task{
